// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-align-start-center"
>
  <Formsy
    className="flex-100 layout-row layout-align-start-center"
    disabled={false}
    getErrorMessage={[Function]}
    getErrorMessages={[Function]}
    getValue={[Function]}
    hasValue={[Function]}
    isFormDisabled={[Function]}
    isFormSubmitted={[Function]}
    isPristine={[Function]}
    isRequired={[Function]}
    isValid={[Function]}
    isValidValue={[Function]}
    mapping={null}
    onChange={[Function]}
    onError={[Function]}
    onInvalid={[Function]}
    onInvalidSubmit={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    onValid={[Function]}
    onValidSubmit={[Function]}
    preventExternalInvalidation={false}
    resetValue={[Function]}
    setValidations={[Function]}
    setValue={[Function]}
    showError={[Function]}
    showRequired={[Function]}
    validationErrors={null}
  >
    <div
      className="flex-66 layout-row layout-wrap"
    >
      <h3
        className="flex-40"
      >
        Find Cities
      </h3>
      <div
        className="offset-5 flex-55"
      >
        <Component
          component={[Function]}
          hideMap={true}
          inputStyles={
            Object {
              "background": "white",
              "marginTop": "9px",
              "width": "96%",
            }
          }
          options={
            Object {
              "types": Array [
                "(cities)",
              ],
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-center-center"
    >
      <RoundButton
        active={false}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass="fa-plus-square-o"
        inverse={false}
        size="small"
        text="Add another"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </Formsy>
</div>
`;

exports[`tmpCity is truthy 1`] = `
<div
  className="flex-100 layout-row layout-align-start-center"
>
  <Formsy
    className="flex-100 layout-row layout-align-start-center"
    disabled={false}
    getErrorMessage={[Function]}
    getErrorMessages={[Function]}
    getValue={[Function]}
    hasValue={[Function]}
    isFormDisabled={[Function]}
    isFormSubmitted={[Function]}
    isPristine={[Function]}
    isRequired={[Function]}
    isValid={[Function]}
    isValidValue={[Function]}
    mapping={null}
    onChange={[Function]}
    onError={[Function]}
    onInvalid={[Function]}
    onInvalidSubmit={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    onValid={[Function]}
    onValidSubmit={[Function]}
    preventExternalInvalidation={false}
    resetValue={[Function]}
    setValidations={[Function]}
    setValue={[Function]}
    showError={[Function]}
    showRequired={[Function]}
    validationErrors={null}
  >
    <div
      className="flex-66 layout-row layout-wrap"
    >
      <h3
        className="flex-40"
      >
        Find Cities
      </h3>
      <div
        className="flex-55 layout-row layout-align-start-center input_box"
      >
        <Formsy(FormsyInput)
          innerRef={[Function]}
          name="city"
          placeholder="City"
          required={false}
          type="text"
          validationError=""
          validationErrors={Object {}}
          validations={null}
          value="CITY"
        />
        <Formsy(FormsyInput)
          innerRef={[Function]}
          name="country"
          placeholder="Country"
          required={false}
          type="text"
          validationError=""
          validationErrors={Object {}}
          validations={null}
        />
      </div>
    </div>
    <div
      className="flex-33 layout-row layout-align-center-center"
    >
      <RoundButton
        active={false}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={null}
        icon=""
        iconClass="fa-plus-square-o"
        inverse={false}
        size="small"
        text="Add another"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </Formsy>
</div>
`;
